<resources>
    <string name="app_name">Get Out Of It</string>

    <!--  MainActivity  -->
    <string name="message_btn">View Messages</string>
    <string name="instant_text_btn">Instant Text</string>

    <!--  CreateMessageActivity  -->
    <string name="excuse_summary_label">Excuse Summary</string>
    <string name="summary_hint">Summary</string>
    <string name="save_message_btn">Save Message</string>
    <string name="update_message_btn">Update Message</string>
    <string name="message_hint">Message</string>
    <string name="create_message_template">Create Message as Template</string>
    <string name="update_template_rb">Update Template</string>
    <string name="new_message_from_template_rb">Create New Message</string>

    <!--  TextAlarmActivity  -->
    <string name="from_label">From</string>
    <string name="message_label">Message</string>
    <string name="message_spinner_first_entry">Created Messages</string>
    <string name="instant_message_rb">Instant Message</string>
    <string name="timed_message_rb">Send on Date</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="time_hint">HH:MM</string>
    <string name="send_instant_message_btn">Send Message</string>
    <string name="save_text_alarm_btn">Save Alarm</string>
    <string name="update_text_alarm_btn">Update Alarm</string>
    <string name="create_new_message_cb">Create New Message</string>

    <!--  Strings to format in code  -->
    <string name="formatted_date">Date: %1$s</string>
    <string name="formatted_time">Time: %1$s</string>
    <string name="formatted_from">From: %1$s</string>
    <string name="formatted_message_summary">Summary: %1$s</string>
    <string name="formatted_message">Message: %1$s</string>

    <!--  Error Messages/Hints  -->
    <string name="message_empty_error">Message is required</string>
    <string name="summary_empty_error">Summary is required</string>
    <string name="generic_empty_error">This field is required</string>

    <!--  Shared Preference Keys  -->
    <string name="sp_key_first_opened">FIRST_TIME_OPENING_APP</string>

    <!--  Phone Numbers  -->
    <string-array name="available_numbers">
        <item>"+18509403946"</item>
    </string-array>
</resources>
