<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding"
    android:orientation="vertical"
    tools:context=".TextAlarmActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label" />

            <EditText
                android:id="@+id/ev_create_alarm_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/from_label"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excuse_summary_label" />

            <EditText
                android:id="@+id/ev_create_alarm_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/summary_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:text="@string/message_label" />

            <Spinner
                android:id="@+id/create_alarm_summary_spinner"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

    <RadioGroup
        android:id="@+id/rg_message_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_instant_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intant_message_rb" />

        <RadioButton
            android:id="@+id/rb_delayed_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timed_message_rb" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/table_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/date_label" />

            <EditText
                android:id="@+id/ev_create_alarm_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/time_label" />

            <EditText
                android:id="@+id/ev_create_alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/time_hint"
                android:inputType="time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

    </TableLayout>

    <MultiAutoCompleteTextView
        android:id="@+id/ev_create_alarm_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:hint="@string/message_hint" />

    <Button
        android:id="@+id/bt_create_alarm_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="0"
        android:text="@string/save_message_btn" />
</LinearLayout>