<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/excuse_summary_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/padding"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/ev_excuse_summary"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:autofillHints="@string/excuse_summary_label"
            android:ems="10"
            android:hint="@string/summary_hint"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/ev_message"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_hint"
        android:inputType="textAutoCorrect|textMultiLine"
        android:singleLine="false" />

    <Button
        android:id="@+id/bt_save_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/padding"
        android:layout_weight="0"
        android:onClick="saveMessageButton"
        android:padding="@dimen/padding"
        android:text="@string/save_message_btn" />

</LinearLayout>